--- a/haxball_site/templates/core/include/navbar.html
+++ b/haxball_site/templates/core/include/navbar.html
@@ -55,6 +55,11 @@
             <a class="nav-link" href="#">Администрация</a>
         </li>
 
+        <li class="nav-item">
+            <a class="nav-link" href="#">Обсуждения</a>
+        </li>
+
+
         <!-- Dropdown -->
 
 
