--- a/haxball_site/templates/core/include/comments.html
+++ b/haxball_site/templates/core/include/comments.html
@@ -31,6 +31,23 @@
         <div class="card-footer text-muted">
             Отправлено {{ comment.created|date:"SHORT_DATE_FORMAT" }} в {{ comment.created|time:"H:i" }}, Автор: <a
                 href="{{ comment.author.user_profile.get_absolute_url }}">{{ comment.author }}</a>
+
+
+
+            <button data-id="{{ comment.id }}" data-type="comment" data-action="dislike" class="p-0 btn btn-sm float-right">
+                <img src="{% static "img/svg/hand-thumbs-down.svg" %}">
+                <span data-count="dislike" title="Не нравится"
+                      class="font-weight-bold">{{ comment.votes.dislikes.count }}</span>
+
+            </button>
+
+                        <button data-id="{{ comment.id }}" data-type="comment" data-action="like" class="p-0 btn btn-sm float-right">
+                <img src="{% static "img/svg/hand-thumbs-up.svg" %}">
+                <span data-count="like" title="Нравится"
+                      class="font-weight-bold">{{ comment.votes.likes.count }}</span>
+
+            </button>
+
         </div>
     </div>
 
