--- a/haxball_site/templates/core/include/sidebar_for_last_activity.html
+++ b/haxball_site/templates/core/include/sidebar_for_last_activity.html
@@ -1,18 +1,53 @@
 {% load static %}
 
 
-<div class="card">
-<div class="card-header rounded-lg" role="alert">
-    Последние обсуждения
+<div class="card mt-2">
+    <div class="card-header rounded-lg text-center">
+        <h4 class="mb-0"><img src="{% static "img/ico/new_1.png" %}" height="37" width="37" style="vertical-align: top"
+                              ;>Комментарии</h4>
+    </div>
+
+    <div class="btn-group-vertical">
+        {% for comment in last_comments %}
+            <a type="button" href="{{ comment.post.get_absolute_url }}" class="btn btn-secondary btn-block text-right"
+               data-toggle="tooltip" data-placement="right" title="от {{ comment.author }}">
+                <div class="d-flex justify-content-between">{{ comment.post.title|truncatechars:22 }} <img
+                        src="{% static "img/ico/reply.png" %}" height="30" width="30"></div>
+            </a>
+
+        {% endfor %}
+    </div>
+    <div class="card-header text-center">
+        <h4 class="mb-0"><img src="{% static "img/ico/top_1.png" %}" height="37" width="37" style="vertical-align: top"
+                              ; class="mr-1">Сегодня</h4>
+    </div>
+    <div class="btn-group-vertical">
+        <a type="button" href="" class="btn btn-secondary btn-block text-right"
+           data-toggle="tooltip" data-placement="right" title="от ">
+            <div class="d-flex justify-content-between">Мас любит кавказ <img
+                    src="{% static "img/ico/reply.png" %}" height="30" width="30"></div>
+        </a>
+
+        <a type="button" href="" class="btn btn-secondary btn-block text-right"
+           data-toggle="tooltip" data-placement="right" title="от ">
+            <div class="d-flex justify-content-between">Гибби пидор <img
+                    src="{% static "img/ico/reply.png" %}" height="30" width="30"></div>
+        </a>
+
+        <a type="button" href="" class="btn btn-secondary btn-block text-right"
+           data-toggle="tooltip" data-placement="right" title="от ">
+            <div class="d-flex justify-content-between">Настройки Радика<img
+                    src="{% static "img/ico/reply.png" %}" height="30" width="30"></div>
+        </a>
+    </div>
+
 </div>
-{% for comment in last_comments %}
-    <blockquote class="blockquote">
+
+<!--  <blockquote class="blockquote">
         <p class="mb-0">{{ comment.body|truncatechars:40 }}</p>
         <footer class="blockquote-footer"><a
                 href="{{ comment.author.user_profile.get_absolute_url }}">{{ comment.author }}</a> в <cite
                 title="{{ comment.post.title }}">{{ comment.post.title|truncatechars:20 }}</cite>
         </footer>
     </blockquote>
-{% endfor %}
-
-</div>
+-->
