--- a/haxball_site/templates/core/include/form_comment.html
+++ b/haxball_site/templates/core/include/form_comment.html
@@ -7,7 +7,7 @@
         <div class="form-group editContent">
 
         <textarea class="form-control border" rows="3" name="body"
-                  id="contactcomment" required="" rows="2" placeholder="Добавьте Ваш комментарий"></textarea>
+                  id="contactcomment" required="" rows="2" placeholder="Оставьте Ваш комментарий"></textarea>
         </div>
         <div align="right">
             <button type="submit" class="btn btn-primary" style="margin-right: 20px">Отправить</button>
