--- a/haxball_site/templates/core/include/post_important_in_list.html
+++ b/haxball_site/templates/core/include/post_important_in_list.html
@@ -4,11 +4,11 @@
 <div class="card mx-1 my-2">
 
     <a href="{{ post.get_absolute_url }}" type="button"
-       class="button btn btn-danger btn-lg btn-block">
+       class="button btn btn-outline-dark btn-lg btn-block">
 
         {{ post.title }}
         {% if post.created|is_fresh:5 %}
-            <span class="badge badge-pill badge-success">Новая!</span>
+        <span class="badge badge-pill badge-success">Новая!</span>
         {% endif %}
 
     </a>
@@ -18,27 +18,33 @@
         </div>
     </div>
 
-    <div class="card-footer px-3 py-1">
+    <div class="card-footer px-3 py-1 d-inline-flex justify-content-between">
         <span class="text-muted"> <img src="{% static "img/ico/calendar_1.png" %}" height="21"
                                        width="21">  {{ post.created|date:"SHORT_DATE_FORMAT" }} <img
-                src="{% static "img/ico/clock_1.png" %}" height="19" width="19"> {{ post.created|time:"H:i" }} <img
-                src="{% static "img/ico/user_1.png" %}" height="19" width="19"><a
-                href="{{ post.author.user_profile.get_absolute_url }}">{{ post.author }}</a>,
+                    src="{% static "img/ico/clock_1.png" %}" height="19" width="19"> {{ post.created|time:"H:i" }} <img
+                    src="{% static "img/ico/user_1.png" %}" height="19" width="19"><a
+                    href="{{ post.author.user_profile.get_absolute_url }}">{{ post.author }}</a>,
             Комментариев: {{ post.comments.count }}</span>
 
-            <button data-toggle="button" aria-pressed="false" data-id="{{ post.id }}" data-type="post" data-action="dislike" class="p-0 btn btn-sm float-right">
-                <img src="{% static "img/svg/hand-thumbs-down.svg" %}">
-                <span data-count="dislike" title="Не нравится"
-                      class="font-weight-bold">{{ post.votes.dislikes.count }}</span>
 
-            </button>
 
-            <button data-id="{{ post.id }}" data-type="post" data-action="like" class="p-0 btn btn-sm float-right">
-                <img src="{% static "img/svg/hand-thumbs-up.svg" %}">
-                <span data-count="like" title="Нравится"
-                      class="font-weight-bold">{{ post.votes.likes.count }}</span>
+        {% if user.is_authenticated %}
+        <div class="btn-group btn-group-toggle vote">
+          <label style="border-radius: 8px" class="p-0 btn btn-sm btn-outline-success
+                {% if post.votes.likes.all|user_in:user %}active{% endif %}"
+                 data-id="{{ post.id }}" data-type="post" data-action="like" id="l{{ post.id }}" title="Нравится">
+              <img src="{% static "img/svg/hand-thumbs-up.svg" %}">
+              <span data-count="like" class="font-weight-bold">{{ post.votes.likes.count }}</span>
 
-            </button>
+          </label>
+
+          <label style="border-radius: 8px" class="p-0 btn btn-sm btn-outline-danger {% if post.votes.dislikes.all|user_in:user %}active{% endif %}"
+                 data-id="{{ post.id }}" data-type="post" data-action="dislike" id="d{{ post.id }}" title="Мас петух">
+              <img src="{% static "img/svg/hand-thumbs-down.svg" %}">
+              <span data-count="dislike" class="font-weight-bold">{{ post.votes.dislikes.count }}</span>
+          </label>
+        </div>
+        {% endif %}
     </div>
 
 
