--- a/haxball_site/templates/core/include/sidebar_for_last_activity.html
+++ b/haxball_site/templates/core/include/sidebar_for_last_activity.html
@@ -2,7 +2,7 @@
 
 
 <div class="card mt-2">
-    <div class="card-header rounded-lg text-center">
+    <div class="card-header text-center p-2">
         <h4 class="mb-0"><img src="{% static "img/ico/new_1.png" %}" height="37" width="37" style="vertical-align: top"
                               ;>Комментарии</h4>
     </div>
@@ -16,29 +16,6 @@
             </a>
 
         {% endfor %}
-    </div>
-    <div class="card-header text-center">
-        <h4 class="mb-0"><img src="{% static "img/ico/top_1.png" %}" height="37" width="37" style="vertical-align: top"
-                              ; class="mr-1">Сегодня</h4>
-    </div>
-    <div class="btn-group-vertical">
-        <a type="button" href="" class="btn btn-secondary btn-block text-right"
-           data-toggle="tooltip" data-placement="right" title="от ">
-            <div class="d-flex justify-content-between">Мас любит кавказ <img
-                    src="{% static "img/ico/reply.png" %}" height="30" width="30"></div>
-        </a>
-
-        <a type="button" href="" class="btn btn-secondary btn-block text-right"
-           data-toggle="tooltip" data-placement="right" title="от ">
-            <div class="d-flex justify-content-between">Гибби пидор <img
-                    src="{% static "img/ico/reply.png" %}" height="30" width="30"></div>
-        </a>
-
-        <a type="button" href="" class="btn btn-secondary btn-block text-right"
-           data-toggle="tooltip" data-placement="right" title="от ">
-            <div class="d-flex justify-content-between">Настройки Радика<img
-                    src="{% static "img/ico/reply.png" %}" height="30" width="30"></div>
-        </a>
     </div>
 
 </div>
