--- a/haxball_site/templates/core/profile/profile_detail.html
+++ b/haxball_site/templates/core/profile/profile_detail.html
@@ -1,15 +1,118 @@
 {% extends "core/home.html" %}
 {% load static %}
+{% load user_tags %}
+{% block styles %}
+    <link rel="stylesheet" type="text/css" href="{% static "core/profile/profile.css" %}">
+    <link rel="stylesheet" type="text/css" href="{% static "core/core.css" %}">
+
+{% endblock %}
 
 {% block profile_of_user %}
+    <hr>
+    <div class="card user-card-full">
+        <div class="row m-l-0 m-r-0">
+            <div class="col-sm-4 bg-c-lite-green user-profile">
+                <div class="card-block text-center text-white">
+                    <div class="m-b-10"><img src="{{ profile.avatar.url }}" width="100%" height="200"
+                                             class="img-radius" alt="User-Profile-Image"></div>
+                    <h4 class="f-w-600">{{ profile.name }}
+                        {% if profile.name.is_superuser %}
+                        <img src="{% static "img/ico/crown.png" %}" height="16"
+                                                                width="16" title="Король ёпт"></h4>
+                        {% endif %}
+                    <p class="mb-1">Без команды</p>
+                    <p>Рейтинг {% karma profile %}</p>
+                </div>
+            </div>
+            <div class="col-sm-8">
+                <div class="card-block">
+                    <h5 class="m-b-20 p-b-5 b-b-default f-w-600">Основная информация</h5>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <p class="m-b-10 f-w-600">Дата регистрации</p>
+                            <h6 class="text-muted f-w-400">{{ profile.name.date_joined|date }}</h6>
+                        </div>
+                        <div class="col-sm-6">
+                            <p class="m-b-10 f-w-600">Последний визит</p>
+                            <h6 class="text-muted f-w-400">{{ profile.name.last_login }}</h6>
+                        </div>
+                        <div class="col-sm-6">
+                            <p class="m-b-10 f-w-600">Дата рождения</p>
+                            <h6 class="text-muted f-w-400">
+                                {% if profile.born_date %}
+                                    {{ profile.born_date }}(15 лет)
+                                {% else %}
+                                    не указана(
+                                {% endif %}
+                            </h6>
+                        </div>
+                        <div class="col-sm-6">
+                            <p class="m-b-10 f-w-600">Город</p>
+                            <h6 class="text-muted f-w-400">
+                                {% if profile.city %}
+                                    {{ profile.city }}(15 лет)
+                                {% else %}
+                                    не указан
+                                {% endif %}</h6>
+                        </div>
+                    </div>
+
+                    <h5 class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600">Активность</h5>
+                    <div class="row">
+                        <div class="col-sm-4 text-center">
+                            <p class="m-b-10 f-w-600"><img src="{% static "img/ico/comment_1.png" %}"></p>
+                            <h6 class="text-primary f-w-400">{{ profile.name.comments_by_user.count }}</h6>
+                        </div>
+                        <div class="col-sm-4 text-center">
+                            <p class="m-b-10 f-w-600"><img src="{% static "img/ico/like_1.png" %}"></p>
+                            <h6 class="text-success f-w-400">{{ profile.name.likedislike_set.likes.count }}</h6>
+                        </div>
+                        <div class="col-sm-4 text-center">
+                            <p class="m-b-10 f-w-600"><img src="{% static "img/ico/dislike_1.png" %}"></p>
+                            <h6 class="text-danger f-w-400">{{ profile.name.likedislike_set.dislikes.count }}</h6>
+                        </div>
+                    </div>
+
+                    <h5 class="m-b-20 m-t-30 p-b-5 b-b-default f-w-600">О себе</h5>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <h6 class="text-muted f-w-400">
+                                {{ profile.about }}
+                            </h6>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+    <hr>
+    <div class="card">
+        <div class="card-body">
+            <img src="{{ profile.avatar.url }}" class="float-left" width="200" height="200">
+            <div class="card-title">
+                <h4> Профиль игрока Радик</h4> <h5>(Худшая команда человечества)</h5>
+
+            </div>
+        </div>
+    </div>
+
+    <!-- самописное гамно-->
     <hr>
     <div class="profile" style="padding: 20px; background-color: #95999c">
         <div class="d-flex justify-content-between bd-highlight mb-3">
             <div class="d-flex justify-content-start"><h2>{{ profile.name }}</h2></div>
             {% if profile.name.username == user.username %}
-            <div class="d-flex justify-content-end" >
-                <a href="{% url 'core:edit_profile' profile.slug profile.id %}" type="button" class="btn btn-warning" role="button" aria-disabled="true">Редактировать профиль</a>
-            </div>
+                <div class="d-flex justify-content-end">
+                    <a href="{% url 'core:edit_profile' profile.slug profile.id %}" type="button"
+                       class="btn btn-warning" role="button" aria-disabled="true">Редактировать профиль</a>
+                </div>
             {% endif %}
         </div>
 
@@ -28,7 +131,9 @@
                 <b>Информация обо мне:</b>
             </div>
             <div class="card-body">
-                {{ profile.about }}
+
+                Зовут Лёха, крутой челик, играю в хакс с 6 лет, каждый день по 18 часов, сейчас мне 25,
+                считаю себя легендой в этом виде спорта!
             </div>
         </div>
 
